--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
-plugins {
+
+ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
@@ -48,7 +49,7 @@ android {
 }
 
 dependencies {
-
+    apply plugin: 'kotlin-kapt'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -66,4 +67,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'androidx.navigation:navigation-compose:2.4.0-beta02'
+
+    def room_version = "2.4.0"
+
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
